examples/test/testpolicy8558.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8558
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key23: value34
      key46: value5
      key34: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value6
          key49: value42
      podSelector:
        matchLabels:
          key16: value13
          key8: value1
          key26: value24
